# bmcweb

./: .eslintignore  COMMON_ERRORS.md  NVIDIA_DEVELOPING.md  Redfish.md  meson.build  meson.options
config/: bmcweb.service.in  bmcweb_config.h.in  meson.build
event-listener/: meson.build
event-listener/service_file/: meson.build
event-listener/src/: listener.cpp  meson.build
http/: app.hpp  complete_response_fields.hpp  http_client.hpp  http_connection.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_stream.hpp  mutual_tls.hpp  routing.hpp  server_sent_event.hpp
include/: asn1.hpp  authentication.hpp  cors_preflight.hpp  dbus_monitor.hpp  dbus_utility.hpp  debug_token.hpp  dot.hpp  dump_offload.hpp  event_service_store.hpp  file_watcher.hpp  gzip_helper.hpp  hostname_monitor.hpp  http_utility.hpp  image_upload.hpp  kvm_websocket.hpp  login_routes.hpp  manual_boot.hpp  multipart_parser.hpp  nbd_proxy.hpp  nvidia_persistent_data.hpp  nvidia_ssl_key_handler.hpp  nvidia_sweinj.hpp  obmc_console.hpp  openbmc_dbus_rest.hpp  persistent_data.hpp  sessions.hpp  ssl_key_handler.hpp  vm_websocket.hpp  watchdog.hpp
include/debug_token/: endpoint.hpp  erase_policy.hpp  install_utils.hpp  request_utils.hpp  status_utils.hpp  targeted_operation.hpp
include/google/: google_service_root.hpp
include/ibm/: management_console_rest.hpp
include/ut/: file_watcher_test.cpp
redfish-core/include/: error_messages.hpp  event_service_manager.hpp  nvidia_event_service_manager.hpp  nvidia_messages.hpp  query.hpp  redfish.hpp  redfish_aggregator.hpp  redfish_nvidia.hpp  registries.hpp  server_sent_events.hpp  update_messages.hpp
redfish-core/include/registries/: openbmc.json  openbmc_message_registry.hpp
redfish-core/include/registries/oem/: nvidia.json  nvidia_message_registry.hpp
redfish-core/include/utils/: chassis_utils.hpp  collection.hpp  conditions_utils.hpp  dbus_event_log_entry.hpp  dbus_log_utils.hpp  dbus_utils.hpp  environment_util.hpp  file_utils.hpp  fw_utils.hpp  health_utils.hpp  hex_utils.hpp  istmode_utils.hpp  json_utils.hpp  log_services_util.hpp  mctp_utils.hpp  memfd_utils.hpp  metric_report_definition_utils.hpp  metric_report_utils.hpp  nsm_cmd_support.hpp  nvidia_async_call_utils.hpp  nvidia_async_set_callbacks.hpp  nvidia_async_set_utils.hpp  nvidia_cable_util.hpp  nvidia_chassis_util.hpp  nvidia_control_utils.hpp  nvidia_fabric_utils.hpp  nvidia_histogram_utils.hpp  nvidia_manager_utils.hpp  nvidia_memory.hpp  nvidia_network_adapters_utils.hpp  nvidia_pcie_utils.hpp  nvidia_power_supply_utils.hpp  nvidia_processor_utils.hpp  nvidia_sensor_utils.hpp  nvidia_systems_util.hpp  nvidia_utils.hpp  origin_utils.hpp  port_utils.hpp  privilege_utils.hpp  processor_utils.hpp  (+5 more)
redfish-core/lib/: account_service.hpp  assembly.hpp  background_copy.hpp  bios.hpp  boot_options.hpp  cable.hpp  certificate_service.hpp  chassis.hpp  commit_image.hpp  component_integrity.hpp  control.hpp  cper_utils.hpp  cpu_diag.hpp  debug_policy.hpp  environment_metrics.hpp  erot_chassis.hpp  ethernet.hpp  event_service.hpp  eventservice_sse.hpp  fabric.hpp  health.hpp  host_interface.hpp  hypervisor_system.hpp  in_band.hpp  leak_detection.hpp  leak_detector.hpp  led.hpp  lldptool_util.hpp  log_services.hpp  log_services_manufacturing_test.hpp  manager_logservices_journal.hpp  managers.hpp  mctp_vdm_util_wrapper.hpp  memory.hpp  message_registries.hpp  metric_report.hpp  metric_report_definition.hpp  network_adapters.hpp  network_adapters_generic.hpp  network_protocol.hpp  (+60 more)
redfish-core/schema/dmtf/installed/: OpenBMCAccountService_v1.xml
redfish-core/schema/dmtf/json-schema-installed/: LeakDetection.v1_0_1.json  LeakDetector.v1_1_0.json
redfish-core/schema/oem/: meson.build
redfish-core/schema/oem/nvidia/: meson.build
redfish-core/schema/oem/nvidia/csdl/: NvidiaChassis_v1.xml  NvidiaComputerSystem_v1.xml  NvidiaDebugToken_v1.xml  NvidiaEnvironmentMetrics_v1.xml  NvidiaFirmwarePackageCollection_v1.xml  NvidiaHistogramBucket_v1.xml  NvidiaHistogramCollection_v1.xml  NvidiaHistogram_v1.xml  NvidiaLogService_v1.xml  NvidiaManager_v1.xml  NvidiaMemoryMetrics_v1.xml  NvidiaNetworkAdapter_v1.xml  NvidiaNetworkProtocol_v1.xml  NvidiaPCIeDevice_v1.xml  NvidiaPersistentStorage_v1.xml  NvidiaPolicy_v1.xml  NvidiaPortMetrics_v1.xml  NvidiaPowerSmoothingPresetProfileCollection_v1.xml  NvidiaPowerSmoothing_v1.xml  NvidiaProcessor_v1.xml  NvidiaRoTChassis_v1.xml  NvidiaRoTImageSlotCollection.xml  NvidiaRoTImageSlotCollection_v1.xml  NvidiaRoTProtectedComponentCollection_v1.xml  NvidiaRoTProtectedComponent_v1.xml  NvidiaSoftwareInventory_v1.xml  NvidiaSwitch_v1.xml  NvidiaSystemConfigProfile_v1.xml  NvidiaSystemProfile_v1.xml  NvidiaUpdateService_v1.xml  NvidiaWorkloadPowerProfileCollection_v1.xml  NvidiaWorkloadPowerProfile_v1.xml  NvidiaWorkloadPower_v1.xml
redfish-core/schema/oem/openbmc/: meson.build
redfish-core/schema/oem/openbmc/csdl/: OpenBMCComputerSystem_v1.xml  OpenBMCManager_v1.xml  OpenBMCVirtualMedia_v1.xml
redfish-core/schema/oem/openbmc/json-schema/: OpenBMCManager.json  OpenBMCManager.v1_0_0.json  OpenBMCVirtualMedia.json  OpenBMCVirtualMedia.v1_0_0.json
redfish-core/src/: error_messages.cpp  filter_expr_executor.cpp  redfish.cpp  redfish_nvidia.cpp  registries.cpp
redfish-core/src/utils/: dbus_utils.cpp  nsm_cmd_support.cpp
redfish-core/ut/: event_service_test.cpp
scripts/: generate_schema_enums.py  parse_registries.py  refactor_ifdef.py  update_nvidia_schemas.py  update_schemas.py
src/: nvidia_persistent_data.cpp  nvidia_ssl_key_handler.cpp  ssl_key_handler.cpp  webserver_run.cpp
static/redfish/v1/JsonSchemas/Endpoint/: Endpoint.json
test/http/: server_sent_event_test.cpp
test/include/: http_utility_test.cpp
test/redfish-core/include/: event_matches_filter_test.cpp  event_service_manager_test.cpp  filter_expr_executor_test.cpp  redfish_aggregator_test.cpp
test/redfish-core/include/utils/: dbus_utils.cpp
test/redfish-core/lib/: manager_logservices_journal_test.cpp  service_root_test.cpp  system_test.cpp
(+16 files in other folders)
